--- a/Application/src/app/features/auth/layout/intro/intro.html
+++ b/Application/src/app/features/auth/layout/intro/intro.html
@@ -1,4 +1,4 @@
-<div class="  p-10 xl:p-24 lg:p-14 container h-[100vh] w-[50%]">
+<div class="  p-10 xl:p-24 lg:p-14 container h-[100vh] ">
     <div >
         <i class="fa-solid fa-folder text-blue-600 text-lg mr-2"></i> 
         <span class="text-blue-600 font-semibold">Exam App</span>
@@ -18,15 +18,15 @@
             <li class=" flex gap-3 w-full h-14">
                 <i class="fa-solid fa-brain border border-blue-600 text-blue-600 "></i>
                 <div>
-                    <h3 class="text-blue-600 col-span-1 row-span-1  text-[20px]  lg:text-xl font-semibold">Tailored Diplomas</h3>
-                    <p class="text-gray-700">Choose from specialized tracks like Frontend, Backend, and Mobile Development</p>
+                    <h3 class="text-blue-600 col-span-1 row-span-1  text-[20px]  lg:text-xl font-semibold">Focused Exams</h3>
+                    <p class="text-gray-700">Access topic-specific tests including HTML, CSS, JavaScript, and more.</p>
                 </div>
             </li>
             <li class=" flex gap-3 w-full h-14">
                 <i class="fa-solid fa-brain border border-blue-600 text-blue-600 "></i>
                 <div>
-                    <h3 class="text-blue-600 col-span-1 row-span-1 text-[20px] lg:text-xl font-semibold">Tailored Diplomas</h3>
-                    <p class="text-gray-700">Choose from specialized tracks like Frontend, Backend, and Mobile Development</p>
+                    <h3 class="text-blue-600 col-span-1 row-span-1 text-[20px] lg:text-xl font-semibold">Smart Multi-Step Forms</h3>
+                    <p class="text-gray-700">Choose from specialized tracks like Frontend, Backend, and Mobile Development.</p>
                 </div>
             </li>
         </ul>
