--- a/Application/src/app/features/auth/components/login/login.html
+++ b/Application/src/app/features/auth/components/login/login.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<div class="h-[100vh] flex justify-center items-center">
+
+    <form (ngSubmit)="onSubmit()" [formGroup]="form"   class="flex flex-col space-y-4 w-[50%] md:w-[70%] sm:w-[90%] p-6  ">
+    <h1 class="text-2xl font-bold mb-6">Login</h1>
+    <div>
+        <label for="email" class="block text-gray-700 font-semibold mb-2">Email</label>
+        <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="user@example.com" required>
+    </div>
+    <div class="flex flex-col space-y-2">
+        <label for="password" class="block text-gray-700 font-semibold mb-2">Password</label>
+        <input type="password" id="password" name="password" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="*****" required>
+        <a (click)="setForgotPasswordChoice()" class="text-blue-600 text-end self-end hover:text-blue-400 transition-all delay-200 ease-in-out">Forget Password?</a>
+
+    </div>
+    <button type="submit" class="bg-blue-600 text-white font-semibold py-2 px-4 mt-5 rounded-md hover:bg-blue-700 transition duration-300">Login</button>
+    <p class="mt-4 text-center text-gray-500">Don't have an account? <a (click)="setCreateAcountChoice()" class="text-blue-600 hover:text-blue-400 transition-all delay-200 ease-in-out">Sign up</a></p>
+</form>
+
+</div>
