--- a/Application/src/app/features/auth/components/forget-password/forget-password.html
+++ b/Application/src/app/features/auth/components/forget-password/forget-password.html
@@ -1,1 +1,22 @@
-<p>forget-password works!</p>
+<main class="w-[90%] felx flex-col justify-center items-center px-2 md:px-6">
+    <h1>Forgot Password</h1>
+    <p class="text-gray-600">Don’t worry, we will help you recover your account.
+Email</p>
+<form>
+    <app-form-input
+    [type]="'email'"
+    [placeHolder]="'user@example.com'"
+    [label]="'Email'"
+    
+    >
+    </app-form-input>
+</form>
+</main>
+
+
+
+
+
+Feedback Message
+Continue
+Don’t have an account? Create yours
