--- a/Application/src/app/features/auth/components/login/login.html
+++ b/Application/src/app/features/auth/components/login/login.html
@@ -1,6 +1,6 @@
 <div class="h-[100vh] flex justify-center items-center">
 
-    <form (ngSubmit)="onSubmit()" [formGroup]="form"   class="flex flex-col space-y-4 w-[50%] md:w-[70%] sm:w-[90%] p-6  ">
+    <form (ngSubmit)="onSubmit()" [formGroup]="form"   class="flex flex-col space-y-4  md:w-[70%] w-[90%] p-6  ">
     <h1 class="text-2xl font-bold mb-6">Login</h1>
 
     <app-form-input 
@@ -19,7 +19,7 @@
     [errorMessage]="'must be at least 6'"
     ></app-form-input>
     </div>
-    <button type="submit" class="bg-blue-600 text-white font-semibold py-2 px-4 mt-5 rounded-md hover:bg-blue-700 transition duration-300">Login</button>
+    <button authButton type="submit">Login</button>
     <p class="mt-4 text-center text-gray-500">Don't have an account? <a (click)="setCreateAcountChoice()" class="text-blue-600 hover:text-blue-400 transition-all delay-200 ease-in-out">Sign up</a></p>
 </form>
 
