--- a/Application/src/app/features/auth/components/login/login.html
+++ b/Application/src/app/features/auth/components/login/login.html
@@ -18,6 +18,7 @@
     [type]="'password'"
     [errorMessage]="'must be at least 6'"
     ></app-form-input>
+    <a (click)="setForgotPasswordChoice()" class="text-blue-600 hover:text-blue-400 transition-all delay-200 ease-in-out self-end">Forgot your Password?</a>
     </div>
     <button authButton type="submit">Login</button>
     <p class="mt-4 text-center text-gray-500">Don't have an account? <a (click)="setCreateAcountChoice()" class="text-blue-600 hover:text-blue-400 transition-all delay-200 ease-in-out">Sign up</a></p>
