--- a/Application/src/app/features/auth/components/forget-password/forget-password.html
+++ b/Application/src/app/features/auth/components/forget-password/forget-password.html
@@ -10,7 +10,7 @@
     [control]="formForgetPassword.controls.email"
     >
     </app-form-input>
-    <button type="submit" authButton>Continue <i class="fa fa-anchor"></i></button>
+    <button type="submit" authButton >Continue <i class="fa fa-arrow-right"></i></button>
 </form>
 <p class="text-gray-600">Don’t have an account? <a  (click)="setAuthChoiceLogin()"   class="text-blue-600"> Create yours</a></p>
 </main>
