--- a/src/app/features/auth/components/register/register.html
+++ b/src/app/features/auth/components/register/register.html
@@ -1,6 +1,6 @@
-<main class="h-[110vh] w-[100%] md:h-[100vh] flex flex-col justify-center items-center md:px-6 px-1 py-4 overflow-y-auto ">
+<main class=" min-h-screen-110vh w-[100%] md:min-h-screen flex flex-col justify-center items-center md:px-6 px-1 py-4 overflow-y-auto ">
 <form  class="flex flex-col space-y-2  w-[85%] md:w-[60%]" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <h1 class="text-2xl font-bold self-start">Create Acount</h1>
+    <h1 class="text-2xl font-bold self-start">Create Account</h1>
 
 
 <div class="flex flex-col md:flex-row">
