--- a/src/app/features/auth/components/forget-password/forget-password.html
+++ b/src/app/features/auth/components/forget-password/forget-password.html
@@ -1,3 +1,4 @@
+
 <main class="w-[100%]  flex flex-col justify-center items-center md:px-6 px-2 py-2 overflow-y-auto h-[100vh]">
 <form  class="flex flex-col space-y-4  w-[90%] md:w-[70%] p-6" [formGroup]="formForgetPassword" (ngSubmit)="onSubmit()">
     <h1 class="text-2xl font-bold mb-6 text-start">Forgot Password</h1>
@@ -12,7 +13,7 @@
     </app-form-input>
     <button type="submit" authButton >Continue <i class="fa fa-arrow-right"></i></button>
 </form>
-<p class="text-gray-600">Don’t have an account? <a  (click)="setAuthChoiceLogin()"   class="text-blue-600"> Create yours</a></p>
+<p class="text-gray-600">Don’t have an account? <a routerLink="/auth/register" class="text-blue-600"> Create yours</a></p>
 </main>
 
 
