--- a/src/app/features/auth/components/login/login.html
+++ b/src/app/features/auth/components/login/login.html
@@ -1,5 +1,5 @@
-<div class="h-[100vh] flex justify-center items-center">
 
+<div class="h-[100vh] flex justify-center items-center">
     <form (ngSubmit)="onSubmit()" [formGroup]="form"   class="flex flex-col space-y-4  md:w-[70%] w-[90%] p-6  ">
     <h1 class="text-2xl font-bold mb-6">Login</h1>
 
@@ -18,10 +18,10 @@
     [type]="'password'"
     [errorMessage]="'must be at least 6'"
     ></app-form-input>
-    <a (click)="setForgotPasswordChoice()" class="text-blue-600 hover:text-blue-400 transition-all delay-200 ease-in-out self-end">Forgot your Password?</a>
+    <a routerLink="/auth/forgot-password" class="text-blue-600 hover:text-blue-400 transition-all delay-200 ease-in-out self-end">Forgot your Password?</a>
     </div>
     <button authButton type="submit">Login</button>
-    <p class="mt-4 text-center text-gray-500">Don't have an account? <a (click)="setCreateAcountChoice()" class="text-blue-600 hover:text-blue-400 transition-all delay-200 ease-in-out">Sign up</a></p>
+    <p class="mt-4 text-center text-gray-500">Don't have an account? <a routerLink="/auth/register" class="text-blue-600 hover:text-blue-400 transition-all delay-200 ease-in-out">Sign up</a></p>
 </form>
 
 </div>
