--- a/src/app/features/auth/auth.html
+++ b/src/app/features/auth/auth.html
@@ -1,20 +1,7 @@
-
-<main class="contain flex">
+<main class="w-[100%]  flex">
 <app-intro class="hidden md:block flex-1"></app-intro>
-@if(authChoiceService.authChoice() === "login"){
-
-    <app-login class="flex-1"></app-login>
-}
-@else if(authChoiceService.authChoice() === "register"){
-    <app-register class="flex-1"></app-register>
-}
-@else if(authChoiceService.authChoice() === "forgot-password"){
-    <app-forget-password class="flex-1"></app-forget-password>
-}
-@else if(authChoiceService.authChoice() === "verify-otp"){
-    <app-verfiy-otp class="flex-1"></app-verfiy-otp>
-}
-@else if(authChoiceService.authChoice() === "new-password"){
-    <app-new-password class="flex-1"></app-new-password>
-}
+<div class="flex-1">
+    <app-auth-nav-bar></app-auth-nav-bar>
+    <router-outlet></router-outlet>
+</div>
 </main>
