forget password restructing

--- a/src/app/features/auth/components/new-password/new-password.html
+++ b/src/app/features/auth/components/new-password/new-password.html
@@ -23,6 +23,6 @@ class="mb-2"
 </app-form-input>
 
 <button authButton type="submit" class="my-5">Reset Password</button>
-<p class="text-gray-600 text-center">Already have an account? <a class="text-blue-600 hover:text-blue-800" routerLink="/auth/register">Create Yours</a></p>
+<p class="text-gray-600 text-center">Already have an account? <a class="text-blue-600 hover:text-blue-800" routerLink="/auth/register" (click)="setForgetPassword()">Create Yours</a></p>
 </form>
 </main>
