--- a/src/app/features/auth/components/verfiy-otp/verfiy-otp.html
+++ b/src/app/features/auth/components/verfiy-otp/verfiy-otp.html
@@ -1,13 +1,13 @@
 <main class="w-[100%]  flex flex-col justify-center items-center md:px-8 px-2 py-2 overflow-y-auto h-[100vh]">
-    <div class="text-start w-[90%]  px-6 mx-auto" routerLink="/auth/forgot-password"> <i class="fa fa-arrow-left"></i></div>
+    <div class="text-start w-[90%]  px-6 mx-auto" (click)="setForgetPassword()"> <i class="fa fa-arrow-left"></i></div>
 <form  class="flex flex-col space-y-4  w-[90%] md:w-[70%] p-6" [formGroup]="form" (ngSubmit)="onSubmit()">
     <h1 class="text-2xl font-bold  text-start">Verify Otp</h1>
     <p class="text-gray-600 ">Please enter the 6-digits code we have sent to:<span class="font-bold text-black"> user@example.com. </span> 
-        <a class=" text-blue-600 underline hover:text-blue-900" routerLink="/auth/forgot-password">Edit</a></p>
+        <a class=" text-blue-600 underline hover:text-blue-900" (click)="setForgetPassword()">Edit</a></p>
     <ng-otp-input [formControl]="form.controls.otp" [config]="{ length: 5 }"></ng-otp-input>
 
     <p class="text-sm text-gray-600 text-center">You can request another code in: 60s</p>
     <button type="submit" authButton>Verfiy Code </button>
 </form>
-<p class="text-gray-600">Don’t have an account? <a routerLink="/auth/register" class="text-blue-600"> Create yours</a></p>
+<p class="text-gray-600">Don’t have an account? <a routerLink="/auth/register"  (click)="setForgetPassword()" class="text-blue-600"> Create yours</a></p>
 </main>
